12/19/12:
	Code for detecting if interface MAC is changing

12/18/12:
	Development begins